# squeak

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
docs/: 2021-12-16-squeak-protocol.md  DESIGN.md  PROTOCOL.md  how-squeak-protocol-works.md  trustless-lightning-payments-for-content.md
squeak/: __init__.py  messages.py  net.py  params.py
squeak/core/: __init__.py  _script.py  elliptic.py  encryption.py  hashing.py  keys.py  script.py  seed.py  signing.py
src/squeak/: __init__.py  messages.py  net.py  params.py
src/squeak/core/: __init__.py  _script.py  encryption.py  script.py  signing.py
tests/: test_messages.py  test_net.py
tests/core/: test_core.py  test_deserialize.py  test_elliptic.py  test_encryption.py  test_keys.py  test_script.py  test_signing.py
