[metadata]
license_files = LICENSE
author = Jonathan Zernik
description = Library for squeak core protocol
long_description = file: README.md
long_description_content_type = text/markdown

[bdist_wheel]
universal = True

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    squeak
